--- a/index.htm
+++ b/index.htm
@@ -459,10 +459,10 @@
 		<div id="info" class="ui-widget-content ui-corner-all">
 			<h3 class="ui-widget-header ui-corner-all">Info - Visualisation of dq0 transform</h3>
 			<p>
-				This tool plots the dq0 transform for a specified input waveform. The three-phase input can be specified in terms of positive, negative, and zero sequence magnitudes and phases. It's also possible to add a harmonic of specified number, sequence, magnitude, and phase.
+				This tool plots the dq0 (Park) transform for a specified input waveform. The three-phase input can be specified in terms of positive, negative, and zero sequence magnitudes and phases. It's also possible to add a harmonic of specified number, sequence, magnitude, and phase.
 			</p>
 			<p>
-				There are three variants of the dq0 transform: MATLAB SimPowerSystems version, the "classic" version, and Wikipedia's version.
+				There are three variants of the dq0/Park transform: MATLAB SimPowerSystems version, the "classic" version, and Wikipedia's version.
 			</p>
 			<p>
 				This uses <a href="http://processingjs.org/">processing.js</a>, and requires an HTML5 browser, and does not work in Internet Explorer. The source code is <a href="https://github.com/stevenblair/dq0">here</a>.
