updated screenshot; minor fixes

--- a/index.htm
+++ b/index.htm
@@ -402,7 +402,7 @@
 	 		<div class="controls" id="pos-control" title="positive sequence magnitude and angle">
 	 			<div class="label" id="pos-label"></div>
 				<span class="vertical" id="pos-mag"></span>
-				<span class="horizontal posColour" id="pos-phase"></span>
+				<span class="horizontal" id="pos-phase"></span>
 			</div>
 	 		<div class="controls" id="neg-control" title="negative sequence magnitude and angle">
 	 			<div class="label" id="neg-label"></div>
